port(phase-1..6): NeoForge 21.1 build, loader APIs, attachments, payloads, MCA 7.7.36 bind
Build: ModDevGradle 2.0.141 on Gradle 8.12, Java 21, NeoForge 21.1.234, Parchment
2024.11.17. MCA comes from the Conczin Maven as net.conczin.mca:mca-neoforge with
transitive = false, since its POM declares Modrinth-only runtime deps that do not
resolve. No mixin AP, no refmap: 1.21.1 runs official names in dev and production
alike. mods.toml becomes neoforge.mods.toml; pack_format 15 becomes 34.

Loader: constructor injection for the entrypoint, ModConfigSpec, standalone
EventBusSubscriber, ServerTickEvent.Post / ClientTickEvent.Post,
LivingIncomingDamageEvent, BuiltInRegistries, ResourceLocation.fromNamespaceAndPath.

Storage: the two Forge player capabilities become data attachments with copyOnDeath,
which deletes both providers and the whole attach/invalidate/clone lifecycle. Tag
schemas are byte-identical, so PlayerLegacyDataMixin can import a 1.20.1 ForgeCaps
blob key-for-key on first load. The three SavedData files keep their names and
payloads and move to SavedData.Factory plus HolderLookup.Provider.

Network: SimpleChannel becomes a CustomPacketPayload registered on the mod bus.

MCA: forge.net.mca becomes net.conczin.mca throughout. The gift hook moves off
acceptGift's HEAD onto the single ItemStack.split(1) in its accepted branch, which
was recording inventory-full, failed and desaturated gifts as accepted. The network
redirect retargets Network.sendToPlayer with an explicit descriptor and reads the
payload records through accessors; the submission guard retargets handleServer;
QuestionMixin takes the two new parameters. VillagerMessageMixin is deleted -- the
1.21.1 payload carries Components directly, so the variant-drift bug it worked
around cannot occur. Personality roster corrected to the 14 MCA actually registers,
with confident and peppy joining athletic as retained legacy voices.

Two encoding bugs fixed on the way: gradle.properties is read as ISO-8859-1, so